# MemPatch

./: .env.example  .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  RETRACE_BENCH.md  RETRACE_LEARN.md  REWRITE_NOTES.md  implementation_plan.md  pyproject.toml  src
audit/: current_claims.md  figure_consistency.md  gold_generation.md  metric_semantics.md  theorem_code_mismatch.md
benchmark/: README.md  __init__.py  api.py  general_taxonomy.py  model_runner.py  public_view.py  scorers_general.py
config/: paper_model_cards.json
configs/: ambiguity_scope_hard_v1_pilot.json  ambiguity_scope_regression.json  ambiguity_scope_regression_v1.json  memora.yaml  model_matrix.siliconflow.yaml  providers.yaml  retrace_prompt.yaml  stale.yaml  stale_official.yaml
data/: README.md
docs/: agent_handoff.md  api_providers.md  architecture.md  artifact_note.md  benchmark_risk_and_external_validation.md  code_direction.md  coding_contract.md  engineering_note.md  evaluation.md  experiment_protocol.md  experiments_open_source_budget_plan.md  iclr_artifact_note.md  implementation_status.md  local_ollama_smoke_report.md  mempatch_decision_boundary_audit.md  mempatch_paper_merge_plan.md  mempatch_refactor_plan.md  mempatch_repo_inventory.md  mempatch_revision_module.md  mempatch_v1_2_dataset_redesign_plan.md  mempatch_v1_3_generator_design.md  method_spec_dpa.md  model_context_index.md  paper1_blueprint_zh.md  paper1_positioning.md  project_governance.md  project_logic.md  real_seeded_acceptance_report.md  real_seeded_local_runbook.md  real_seeded_zip_review_prompt.md  refactor_plan_defeat_path.md  reference_integration_map.md  reference_strategy.md  repo_consolidation_audit.md  repo_file_map.md  repo_layout.md  repository_execution_contract.md  reproducibility.md  research_positioning.md  retrace_learn_full_plan.md  (+9 more)
experiments/: README.md  analyze.py  config.json  cupmem_adapter.py  cupmem_bridge.py  methods.py  run_all.sh  run_core.py  stale_adapter.py  stale_cupmem_comparison.py  stale_style_retrace_validation.py  validate_run.py
mempatch/: __init__.py  evaluation.py
registry/: upstreams.lock.yaml
release/: README.md
retracemem/: pipeline.py  schemas.py
scripts/: README.md  _root.py  aggregate_retrace_bench_results.py  analyze_memora_oracle_failure_modes.py  analyze_mlx_lora_errors.py  analyze_retrace_template_signatures.py  analyze_retrace_v1_gated_results.py  audit_decision_boundary.py  audit_retrace_bench_outputs.py  benchmark_paper_export.py  build_aaai27_tables.py  build_ablation_eval_slices.py  build_dpa_reward_rollouts.py  build_failure_analysis.py  build_hf_release_v1_1.py  build_raw_dialogue_synth.py  build_retrace_bench_hard150_balanced_report.py  build_retrace_bench_hard50_summary.py  build_retrace_bench_v1.py  (+102 more)
(+1485 files in other folders)
