[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mempatch"
version = "0.1.0"
description = "MemPatch benchmark and rapid memory integration revision module."
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0,<2",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8",
    "pytest>=8",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.25",
    "google-genai>=1.0",
]
mem0 = [
    "mem0ai",
    "chromadb",
    "ollama",
    "sentence-transformers>=3.0",
]

[project.scripts]
MemPatch = "mempatch.benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mempatch*", "scripts*"]
exclude = ["mempatch.tests*"]

[tool.pyright]
include = ["mempatch", "scripts"]
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["mempatch/tests"]
