[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mempatch"
version = "0.1.0"
description = "MemPatch benchmark and rapid memory integration revision module."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
reporting = [
    "matplotlib>=3.8",
]
server = [
    "accelerate>=1.0",
    "numpy>=1.26",
    "safetensors>=0.4",
    "torch>=2.4",
    "transformers>=4.51",
]
[project.scripts]
MemPatch = "mempatch.benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mempatch*", "tools*"]

[tool.pyright]
include = ["mempatch", "tools"]
extraPaths = ["."]
